--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "^3.1.0",
     "dotenv": "^5.0.1",
     "express": "^4.13.0",
+    "googleapis": "^39.2.0",
     "i18n": "^0.8.3",
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
