--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^6.4.0",
+    "@sentry/node": "^5.7.1",
     "body-parser": "^1.18.0",
     "cookie-parser": "^1.4.0",
     "debug": "^3.1.0",
