--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "slack-invite-automation",
-  "version": "0.3.4",
+  "version": "0.4.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "release": "node ./bin/release"
   },
   "engines": {
     "node": "12.x"
